# bereal-wrapped

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Dockerfile.cli  LICENSE  Makefile  Procfile  README.md  SECURITY.md  asset-manifest.json  config.ini  docker-compose.local.yml  docker-compose.yml  docker-stack.local.yml  docker-stack.yml  index.html  logger.ini  package-lock.json  pyproject.toml
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.MD
.github/workflows/: client.yml  server.yml
bereal/: bereal.py  celery.py  cli.py  images.py  logger.py  send.py  server.py  utils.py  videos.py
bereal/templates/: about.html  contact.html  failure.html  index.html  preview.html  privacy.html  process.html  verify.html
client/: CNAME  package-lock.json  package.json  tailwind.config.js  tsconfig.json
client/public/: index.html  manifest.json
client/src/: index.tsx  utils.ts
docker/: Dockerfile.celery  Dockerfile.cli  Dockerfile.flower  Dockerfile.server
fail2ban/: jail.local
migrations/: MIGRATIONS.md
nginx/: nginx.conf
redis/: redis.conf
requirements/: common.txt  dev.txt  prod.txt
scripts/: server-entrypoint.sh  test-cors.sh  test-nginx.sh  volumes.sh
src/: bereal.py  cli.py  combine_images.py  generate_slideshow.py  images.py  logger.py  main.py  utils.py  videos.py
src/static/: styles.css
src/templates/: about.html  contact.html
static/css/: main.2593f1ff.css  main.2593f1ff.css.map  main.2f0d6bfd.css  main.2f0d6bfd.css.map  main.3184844e.css  main.3184844e.css.map  main.6fb42449.css  main.6fb42449.css.map  (+14 more)
(+75 files in other folders)
